[package]
name = "turbopuffer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
bytes = "1.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
ahash = "0.8"
smallvec = "1.11"
once_cell = "1.19"
roaring = "0.10"
lru = "0.12"
num_cpus = "1.16"
rand = "0.8"
crossbeam = "0.8"

# For production, you'd want these too:
# lz4 = "1.24"
# memmap2 = "0.9"
# simd-json = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1